include/WasatchVCPP.h


    DLL_API int wp_set_logfile_path(const char* pathname, int len);
    DLL_API int wp_set_log_level(int level);
    DLL_API int wp_log_debug(const char* msg, int len);
    DLL_API int wp_get_library_version(char* value, int len);
    DLL_API int wp_open_all_spectrometers();
    DLL_API int wp_get_number_of_spectrometers();
    DLL_API int wp_close_all_spectrometers();
    DLL_API int wp_close_spectrometer(int specIndex);
    DLL_API int wp_get_eeprom_field_count(int specIndex);
    DLL_API int wp_get_eeprom_field_name(int specIndex, int index, char *value, int len);
    DLL_API int wp_get_eeprom(int specIndex, const char** names, const char** values, int len);
    DLL_API int wp_get_eeprom_page(int specIndex, int page, unsigned char* buf, int len);
    DLL_API int wp_get_eeprom_field(int specIndex, const char* name, char* value, int len);
    DLL_API int wp_get_pixels(int specIndex);
    DLL_API int wp_get_model(int specIndex, char* value, int len);
    DLL_API int wp_get_serial_number(int specIndex, char* value, int len);
    DLL_API int wp_get_wavelengths(int specIndex, double* wavelengths, int len);
    DLL_API int wp_get_wavenumbers(int specIndex, double* wavenumbers, int len);
    DLL_API int wp_get_spectrum(int specIndex, double* spectrum, int len);
    DLL_API int wp_cancel_operation(int specIndex, int blocking);
    DLL_API int wp_set_max_timeout_ms(int specIndex, int maxTimeoutMS);
    DLL_API int wp_get_max_timeout_ms(int specIndex);
    DLL_API int wp_set_integration_time_ms(int specIndex, unsigned long ms);
    DLL_API int wp_set_laser_enable(int specIndex, int value);
    DLL_API int wp_set_detector_gain(int specIndex, float value);
    DLL_API int wp_set_detector_gain_odd(int specIndex, float value);
    DLL_API int wp_set_detector_offset(int specIndex, int value);
    DLL_API int wp_set_detector_offset_odd(int specIndex, int value);
    DLL_API int wp_set_detector_tec_enable(int specIndex, int value);
    DLL_API int wp_set_detector_tec_setpoint_deg_c(int specIndex, int value);
    DLL_API int wp_set_high_gain_mode_enable(int specIndex, int value);
    DLL_API int wp_get_firmware_version(int specIndex, char* value, int len);
    DLL_API int wp_get_fpga_version(int specIndex, char* value, int len);
    DLL_API float wp_get_detector_temperature_deg_c(int specIndex);
    DLL_API long wp_get_integration_time_ms(int specIndex);
    DLL_API int wp_get_laser_enable(int specIndex);
    DLL_API float wp_get_detector_gain(int specIndex);
    DLL_API float wp_get_detector_gain_odd(int specIndex);
    DLL_API int wp_get_detector_offset(int specIndex);
    DLL_API int wp_get_detector_offset_odd(int specIndex);
    DLL_API int wp_get_detector_tec_enable(int specIndex);
    DLL_API int wp_get_detector_tec_setpoint_deg_c(int specIndex);
    DLL_API int wp_get_high_gain_mode_enable(int specIndex);
    DLL_API int wp_send_control_msg(int specIndex, 
                           unsigned char bRequest, 
                           unsigned int wValue,
                           unsigned int wIndex,
                           unsigned char* data,
                           int len);
    DLL_API int wp_read_control_msg(int specIndex, 
                                    unsigned char bRequest, 
                                    unsigned int wIndex,
                                    unsigned char* data,
                                    int len);