WasatchVCPPNet/WasatchVCPP.cs


    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern int   /* tested */ wp_close_all_spectrometers();
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern int   /* tested */ wp_close_spectrometer(int specIndex);
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern float /* tested */ wp_get_detector_gain(int specIndex);
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern float /* tested */ wp_get_detector_gain_odd(int specIndex);
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern int   /* tested */ wp_get_detector_tec_setpoint_deg_c(int specIndex);
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern float /* tested */ wp_get_detector_temperature_deg_c(int specIndex);
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern int   /* tested */ wp_get_detector_offset(int specIndex);
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern int   /* tested */ wp_get_detector_offset_odd(int specIndex);
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern int   /* tested */ wp_get_detector_tec_enable(int specIndex);
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern int                wp_get_eeprom(int specIndex, ref byte names, ref byte values, int len);
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern int   /* tested */ wp_get_eeprom_field(int specIndex, ref byte name, ref byte value, int len);
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern int   /* tested */ wp_get_eeprom_field_count(int specIndex);
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern int   /* tested */ wp_get_eeprom_field_name(int specIndex, int index, ref byte name, int len);
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern int   /* tested */ wp_get_eeprom_page(int specIndex, int page, ref byte buf, int len);
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern int   /* tested */ wp_get_firmware_version(int specIndex, ref byte value, int len);
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern int   /* tested */ wp_get_fpga_version(int specIndex, ref byte value, int len);
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern int   /* tested */ wp_get_high_gain_mode_enable(int specIndex);
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern int   /* tested */ wp_get_integration_time_ms(int specIndex);
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern int   /* tested */ wp_get_laser_enable(int specIndex);
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern int   /* tested */ wp_get_library_version(ref byte value, int len);
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern int   /* tested */ wp_get_max_timeout_ms(int specIndex);
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern int   /* tested */ wp_get_model(int specIndex, ref byte value, int len);
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern int   /* tested */ wp_get_number_of_spectrometers();
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern int   /* tested */ wp_get_pixels(int specIndex);
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern int   /* tested */ wp_get_serial_number(int specIndex, ref byte value, int len);
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern int   /* tested */ wp_get_spectrum(int specIndex, ref double spectrum, int len);
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern int   /* tested */ wp_get_wavelengths(int specIndex, ref double wavelengths, int len);
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern int   /* tested */ wp_get_wavenumbers(int specIndex, ref double wavenumbers, int len);
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern int   /* tested */ wp_log_debug(ref byte msg, int len);
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern int   /* tested */ wp_open_all_spectrometers();
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern int                wp_read_control_msg(byte bRequest, ushort wIndex, ref byte data, int len, int fullLen);
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern int                wp_send_control_msg(byte bRequest, ushort wValue, ushort wIndex, ref byte data, int len);
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern int   /* tested */ wp_set_detector_gain(int specIndex, float value);
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern int   /* tested */ wp_set_detector_gain_odd(int specIndex, float value);
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern int   /* tested */ wp_set_detector_offset(int specIndex, int value);
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern int   /* tested */ wp_set_detector_offset_odd(int specIndex, int value);
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern int   /* tested */ wp_set_detector_tec_enable(int specIndex, int value);
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern int   /* tested */ wp_set_detector_tec_setpoint_deg_c(int specIndex, int value);
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern int   /* tested */ wp_set_high_gain_mode_enable(int specIndex, int value);
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern int   /* tested */ wp_set_integration_time_ms(int specIndex, uint ms);
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern int   /* tested */ wp_set_laser_enable(int specIndex, int value); 
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern int   /* tested */ wp_set_log_level(int level);
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern int   /* tested */ wp_set_logfile_path(ref byte pathname, int len);
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern int   /* tested */ wp_cancel_operation(int specIndex);
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)] public static extern int   /* tested */ wp_set_max_timeout_ms(int specIndex, int maxTimeoutMS);
}

